@@ -1,5 +1,10 @@
 2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Traverse.cpp:
+	* Inline.h: 
+
+2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Route.h:
 	* SFVec3.h:
 	* SFVec4.h:
